--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,16 @@ dependencies {
     implementation 'com.github.javafaker:javafaker:1.0.2'
     implementation 'com.machinezoo.noexception:noexception:1.9.0'
 
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+    testImplementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0'
+
 }
 
 test {
-    useTestNG()
+    useTestNG(){
+//        suites ""
+//        systemProperty "browser", System.getProperty("browser")
+
+    }
 }
