added local and remote webdriver factory classes

--- a/src/test/resources/qa-config.properties
+++ b/src/test/resources/qa-config.properties
@@ -1,3 +1,9 @@
 #chrome, firefox, or edge
-browser=chrome
+browser=edge
+
+#local or remote
+browserRunMode=remote
+
+#selenium_grid, selenoid, browserstack
+browserRemoteMode=selenoid
 
